--- a/www/index.html
+++ b/www/index.html
@@ -16,12 +16,27 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <script src="js/ng-cordova.min.js"></script>
+	<script src="cordova.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+	<script>
+	function takePicture() {
+		navigator.camera.getPicture(function(imageURI) {
+
+		// imageURI is the URL of the image that we can use for
+		// an <img> element or backgroundImage.
+
+		}, function(err) {
+
+			// Ruh-roh, something bad happened
+
+		}, cameraOptions);
+	}
+	</script>
   </head>
   <body ng-app="starter">
     <!--
@@ -31,6 +46,8 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
+	
+	<img src=imageURL alt="image"> </img>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
